name:           hake
version:        0.0.4
license:        LGPL-2.1
category:       Development
author:         Miezhiko
maintainer:     Miezhiko <miezhiko@gmail.com>
synopsis:       Writting scripts.
description:
  Writting scripts with depending actions

build-type:     Simple
cabal-version:  2.0

Library
  default-language: Haskell2010
  Hs-Source-Dirs: src
  exposed-modules:
      Hake
  Other-Modules:
      Hake.Global
      Hake.Optional
      Hake.Core
      Hake.Common
      Hake.Lang.Haskell
      Hake.Lang.Utils
      Hake.Lang.C
      Hake.Lang.Rust
      Hake.Lang.Js
      Hake.Helper.FileSystem
      Hake.Helper.Syntax
  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , base-unicode-symbols
    , MissingH

Executable    hake
  default-language: Haskell2010
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  Other-Modules:
    HakeScript
    Version
    Script

    Hake
    Hake.Global
    Hake.Optional
    Hake.Core
    Hake.Common
    Hake.Lang.Haskell
    Hake.Lang.Utils
    Hake.Lang.C
    Hake.Lang.Rust
    Hake.Lang.Js
    Hake.Helper.FileSystem
    Hake.Helper.Syntax
    Paths_hake

  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , MissingH
    , hake
    , base-unicode-symbols

  if !os(windows)
    Build-Depends:
      unix
