name:           hake
version:        0.1.3
license:        LGPL-2.1
category:       Development
author:         Miezhiko
maintainer:     Miezhiko <miezhiko@gmail.com>
synopsis:       Writting scripts.
description:
  Writting scripts with depending actions

build-type:     Simple
cabal-version:  2.0

Library
  default-language: Haskell2010
  Hs-Source-Dirs: src
  exposed-modules:
      Hake
  Other-Modules:
      Hake.Syntax
      Hake.Operators
      Hake.Global
      Hake.Optional
      Hake.Core
      Hake.Common
      Hake.Lang.Haskell
      Hake.Lang.C
      Hake.Lang.Rust
      Hake.Lang.Js
      Hake.Lang.Idris2
      Hake.Helper.Utils
      Hake.Helper.Systemd
      Hake.Helper.FileSystem
      Hake.Helper.Syntax
  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , base-unicode-symbols
    , MissingH
    , containers
  ghc-options:
    -Wall

Executable    hake
  default-language: Haskell2010
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  Other-Modules:
    HakeScript
    Version
    Script

    Hake
    Hake.Syntax
    Hake.Operators
    Hake.Global
    Hake.Optional
    Hake.Core
    Hake.Common
    Hake.Lang.Haskell
    Hake.Lang.C
    Hake.Lang.Rust
    Hake.Lang.Js
    Hake.Lang.Idris2
    Hake.Helper.Utils
    Hake.Helper.Systemd
    Hake.Helper.FileSystem
    Hake.Helper.Syntax
    Paths_hake

  Build-Depends:
      base
    , process
    , split
    , directory
    , filepath
    , time
    , MissingH
    , containers
    , hake
    , base-unicode-symbols

  if !os(windows)
    Build-Depends:
      unix
